# paper-path

./: .gitignore  README.md  pyproject.toml
notebooks/: arxiv_eda.ipynb  category_map.py  snapshot_conveter.ipynb  snapshot_eda.ipynb
